# local-tool-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  agent.py  docker-compose.yml  main.py  pyproject.toml  server.py
local_tool_ai/: agent.py  cli.py  init.py  main.py  server.py
local_tool_ai/tools/: git.py  list_folder.py  read_docx.py  registry.py  run_bash.py
static/: index.html
tests/: test_git.py  test_list_folder.py  test_read_docx.py  test_read_file.py  test_read_pdf.py  test_registry.py  test_run_bash.py  test_search_files.py  test_sensitive_paths.py
tools/: git.py  list_folder.py  read_file.py  read_pdf.py  registry.py  run_bash.py  search_files.py
